RESOLVED FIXED183148
Loads for a Document controlled by a Service Worker should not use AppCache
https://bugs.webkit.org/show_bug.cgi?id=183148
Summary Loads for a Document controlled by a Service Worker should not use AppCache
youenn fablet
Reported 2018-02-26 14:00:55 PST
According spec, any service worker client matching a service worker registration, be it controlled or not, should stop using app cache. As a first step, we can disable app cache for any service worker client being controlled by a service worker.
Attachments
Patch (6.66 KB, patch)
2018-02-26 14:06 PST, youenn fablet
no flags
Patch (7.43 KB, patch)
2018-02-26 14:16 PST, youenn fablet
no flags
Patch (7.71 KB, patch)
2018-02-26 14:35 PST, youenn fablet
no flags
Patch (7.71 KB, patch)
2018-02-26 15:01 PST, youenn fablet
no flags
Patch (17.68 KB, patch)
2018-02-28 14:05 PST, youenn fablet
no flags
Patch (17.76 KB, patch)
2018-02-28 14:39 PST, youenn fablet
no flags
Archive of layout-test-results from ews102 for mac-sierra (2.39 MB, application/zip)
2018-02-28 15:24 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews107 for mac-sierra-wk2 (2.88 MB, application/zip)
2018-02-28 15:39 PST, EWS Watchlist
no flags
Patch (17.93 KB, patch)
2018-02-28 15:54 PST, youenn fablet
no flags
youenn fablet
Comment 1 2018-02-26 14:06:02 PST
youenn fablet
Comment 2 2018-02-26 14:16:09 PST
youenn fablet
Comment 3 2018-02-26 14:35:29 PST
youenn fablet
Comment 4 2018-02-26 15:01:45 PST
youenn fablet
Comment 5 2018-02-28 14:05:00 PST
youenn fablet
Comment 6 2018-02-28 14:39:28 PST
EWS Watchlist
Comment 7 2018-02-28 15:24:27 PST
Comment on attachment 334771 [details] Patch Attachment 334771 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/6710776 New failing tests: http/tests/navigation/error404-goback.html
EWS Watchlist
Comment 8 2018-02-28 15:24:28 PST
Created attachment 334775 [details] Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 9 2018-02-28 15:39:16 PST
Comment on attachment 334771 [details] Patch Attachment 334771 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/6710971 New failing tests: http/tests/navigation/error404-goback.html
EWS Watchlist
Comment 10 2018-02-28 15:39:18 PST
Created attachment 334777 [details] Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
youenn fablet
Comment 11 2018-02-28 15:54:12 PST
Chris Dumez
Comment 12 2018-03-02 09:47:52 PST
Comment on attachment 334779 [details] Patch r=me
WebKit Commit Bot
Comment 13 2018-03-02 10:29:47 PST
Comment on attachment 334779 [details] Patch Clearing flags on attachment: 334779 Committed r229181: <https://trac.webkit.org/changeset/229181>
WebKit Commit Bot
Comment 14 2018-03-02 10:29:48 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 15 2018-03-02 10:31:32 PST
Note You need to log in before you can comment on or make changes to this bug.